--- a/monuments.html
+++ b/monuments.html
@@ -4,7 +4,7 @@
 <head>
   <style>
     body {
-      background:transparent url('background-img/monuments.jpg') repeat center top;
+      background:transparent url('background-img/A.jpg') repeat center top;
     }
   </style>
   <title>Monuments of India</title>
