--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <div class="header-name" id="head-name">About Us
     <div class="header-button">
         <a class="active" href="monuments.html">Home</a>
-        <a class="active" href="#contact">Contact</a>
+        <a class="active" href="https://rk2962002.github.io/site/page1.html">Contact</a>
         <a class="active" href="about.html">About</a>
       </div>
       </div>
@@ -35,17 +35,17 @@
 <! –– MENU BAR ––>
   <div>
     <ul class="links">
-        <li><a href="monuments.html" title="Monuments of India" target="_blank">Home</a></li>
-        <li><a href="tajmahal.html" title="Taj Mahal" target="_blank">1</a></li>
-        <li><a href="redfort.html" title="Red Fort" target="_blank">2</a></li>
-        <li><a href="lotustemple.html" title="Lotus Temple" target="_blank">3</a></li>
-        <li><a href="qutubminar.html" title="Qutub Minar" target="_blank">4</a></li>
-        <li><a href="victoriamemorial.html" title="Victoria Memorial" target="_blank">5</a></li>
-        <li><a href="gatewayofindia.html" title="Gateway of India" target="_blank">6</a></li>
-        <li><a href="charminar.html" title="Charminar" target="_blank">7</a></li>
-        <li><a href="hawamahal.html" title="Hawa Mahal" target="_blank">8</a></li>
-        <li><a href="mysorepalace.html" title="Mysore Palace" target="_blank">9</a></li>
-        <li><a href="cst.html" title="CST" target="_blank">10</a></li>
+        <li><a href="monuments.html" title="Monuments of India" >Home</a></li>
+        <li><a href="tajmahal.html" title="Taj Mahal" >1</a></li>
+        <li><a href="redfort.html" title="Red Fort" >2</a></li>
+        <li><a href="lotustemple.html" title="Lotus Temple" >3</a></li>
+        <li><a href="qutubminar.html" title="Qutub Minar" >4</a></li>
+        <li><a href="victoriamemorial.html" title="Victoria Memorial" >5</a></li>
+        <li><a href="gatewayofindia.html" title="Gateway of India" >6</a></li>
+        <li><a href="charminar.html" title="Charminar" >7</a></li>
+        <li><a href="hawamahal.html" title="Hawa Mahal" >8</a></li>
+        <li><a href="mysorepalace.html" title="Mysore Palace" >9</a></li>
+        <li><a href="cst.html" title="CST" >10</a></li>
     </ul>
   </div>
 <! –– TOP BUTTON ––>
@@ -135,36 +135,39 @@
     }
   </script>
 <! –– BODY ––>
-  <div id="body-text-1"><div class="body-title-1">About Us</div>Rohit Kumar<br><q>I love to learn about new technologies and would like to contribute alongwith upgrading my skills and knowledge.</q><br>#Ghaziabad,UP<br>#A Web Developer<br>#B.Tech/Computer Science and Engineering<br>#ABES Engineering College,Ghaziabad.<br>For More Details Check Out below:</div>
+  <div id="body-text-1"><div class="body-title-1">About Us</div>Created and Hosted by : Rohit Kumar<br><q>I love to learn about new technologies and would like to contribute alongwith upgrading my skills and knowledge.</q><br># Ghaziabad,UP<br># A Web Developer<br># B.Tech/Computer Science and Engineering<br># ABES Engineering College,Ghaziabad.<br>For More Details Refer to Contact Section at the top of Page Or Check Out below:</div>
   <hr width="100%">
-  <div id="body-text-1"><div class="body-title-1">References</div><ul>
-    <li>1.Government of India</li><br>
-    <li>2.Wikipedia</li><br>
-    <li>3.Getty Images</li><br>
-    <li>4.Google Maps</li><br>
-    <li>5.Official Websites</li><br>
-    <li>6.You Tube</li><br>
-    <li>7.Web Free Counter</li><br>
-    <li>8.W3CSchools</li></ul><br>
+  <div id="body-text-1"><div class="body-title-1">References</div><br><span>All the Materials Used in Making this sites are copy from these references sites and no material can be presented in prohibited way</span>
+    <span class="referen"><br>
+    <a href="https://www.india.gov.in/" target="_blank">1.Government of India</a><br>
+    <a href="https://www.wikipedia.org/" target="_blank">2.Wikipedia</a><br>
+    <a href="https://www.gettyimages.in/" target="_blank">3.Getty Images</a><br>
+    <a href="https://www.google.com/maps" target="_blank">4.Google Maps</a><br>
+    <a href="https://www.youtube.com/" target="_blank">5.You Tube</a><br>
+    <a href="https://www.webfreecounter.com/" target="_blank">6.Web Free Counter</a><br>
+    <a href="https://www.w3schools.com/" target="_blank">7.W3CSchools</a><br>
+    8.Official Websites<br>
     </div>
   <hr width="100%">
+  <div class="body-title-1">-----Thanking You-----</div>
 <! –– FOOTER ––>
   <footer class="panel-footer ">
       <div class="container">
           <div class="row footer-text">
 <! –– MONUMENTS LIST ––>
             <section id="monuments-list" class="col-sm-4">
-              <span><a href="monuments.html" target="_blank">Home Page</a></span><br>
-              <a href="tajmahal.html" target="_blank">1.Taj Mahal</a><br>
-              <a href="redfort.html" target="_blank">2.Red Fort</a><br>
-              <a href="lotustemple.html" target="_blank">3.Lotus Temple</a><br>
-              <a href="qutubminar.html" target="_blank">4.Qutub Minar</a><br>
-              <a href="victoriamemorial.html" target="_blank">5.Victoria Memorial</a><br>
-              <a href="gatewayofindia.html" target="_blank">6.Gateway of India</a><br>
-              <a href="charminar.html" target="_blank">7.Charminar</a><br>
-              <a href="hawamahal.html" target="_blank">8.Hawa Mahal</a><br>
-              <a href="mysorepalace.html" target="_blank">9.Mysore Palace</a><br>
-              <a href="cst.html" target="_blank">10.CST</a><br><hr class="visible-xs">
+              <a href="monuments.html">Home Page</a><br>
+              <a href="tajmahal.html">1.Taj Mahal</a><br>
+              <a href="redfort.html">2.Red Fort</a><br>
+              <a href="lotustemple.html">3.Lotus Temple</a><br>
+              <a href="qutubminar.html">4.Qutub Minar</a><br>
+              <a href="victoriamemorial.html">5.Victoria Memorial</a><br>
+              <a href="gatewayofindia.html">6.Gateway of India</a><br>
+              <a href="charminar.html">7.Charminar</a><br>
+              <a href="hawamahal.html">8.Hawa Mahal</a><br>
+              <a href="mysorepalace.html">9.Mysore Palace</a><br>
+              <a href="cst.html">10.CST</a><br>
+              <a href="about.html">About Us</a><br><hr class="visible-xs">
             </section>
 <! –– IMPORTANT SITES ––>
             <section id="important-sites" class="col-sm-4">
@@ -182,7 +185,7 @@
 <! –– ABOUT US ––>
             <section id="about" class="col-sm-4">
                 <p>Contact Us:<br>
-                <a href="https://rk2962002.github.io/my-site/index.html" target="_blank">Rohit Kumar</a><br><a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
+                <a href="https://rk2962002.github.io/site/page1.html" target="_blank">Rohit Kumar</a><br><a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
                 <a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp;9084950475</a><br>
                 <a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;rohit.19b101051@abes.ac.in</a><br><br>Follows Us:<br>
               <a href="https://www.facebook.com/profile.php?id=100040466752176" target="_blank" class="fa fa-facebook"></a>&nbsp;
@@ -193,7 +196,7 @@
             </section>
           </div>
 <! –– COPYRIGHT ––>
-          <div class="text-center">&copy; Copyright Rohit Kumar|Monuments of India|2020<br>
+          <div class="text-center">&copy; Copyright Rohit Kumar|About Us|2020<br>
             <marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar&nbsp;&nbsp;&nbsp;&nbsp;Thanks for Visiting&nbsp;&nbsp;&nbsp;&nbsp;Visit Again</marquee>
           </div>
       </div>
