--- a/gatewayofindia.html
+++ b/gatewayofindia.html
@@ -26,8 +26,8 @@
 		<div class="header-name" id="head-name">Gateway of India
 		<div class="header-button">
     		<a class="active" href="monuments.html">Home</a>
-    		<a class="active" href="#contact">Contact</a>
-    		<a class="active" href="#about">About</a>
+    		<a class="active" href="https://rk2962002.github.io/site/page1.html">Contact</a>
+    		<a class="active" href="about.html">About</a>
     	</div>
     	</div>
     	</p>
@@ -35,7 +35,7 @@
 <! –– MENU BAR ––>
 	<div>
 		<ul class="links">
-  			<li><a href="monuments.html" target="_blank">Home</a></li>
+  			<li><a href="monuments.html">Home</a></li>
   			<li><a href="https://mumbaicity.gov.in/tourist-place/gateway-of-india/" target="_blank">Official Site</a></li>
   			<li><a href="https://www.gettyimages.in/photos/gateway-of-india?mediatype=photography&phrase=GATEWAY%20OF %20INDIA&sort=mostpopular" target="_blank">Gallery</a></li>
  	 		<li><a href="https://en.wikipedia.org/wiki/Gateway_of_India" target="_blank">Wikipedia</a></li>
@@ -119,17 +119,18 @@ The Gateway of India is located on the waterfront at Apollo Bunder area at the e
       		<div class="row footer-text">
 <! –– MONUMENTS LIST ––>
             <section id="monuments-list" class="col-sm-4">
-                <span><a href="monuments.html" target="_blank">Home Page</a></span><br>
-                <a href="tajmahal.html" target="_blank">1.Taj Mahal</a><br>
-                <a href="redfort.html" target="_blank">2.Red Fort</a><br>
-              <a href="lotustemple.html" target="_blank">3.Lotus Temple</a><br>
-              <a href="qutubminar.html" target="_blank">4.Qutub Minar</a><br>
-              <a href="victoriamemorial.html" target="_blank">5.Victoria Memorial</a><br>
-              <a href="gatewayofindia.html" target="_blank">6.Gateway of India</a><br>
-              <a href="charminar.html" target="_blank">7.Charminar</a><br>
-              <a href="hawamahal.html" target="_blank">8.Hawa Mahal</a><br>
-              <a href="mysorepalace.html" target="_blank">9.Mysore Palace</a><br>
-              <a href="cst.html" target="_blank">10.CST</a><br><hr class="visible-xs">
+              <a href="monuments.html">Home Page</a><br>
+              <a href="tajmahal.html">1.Taj Mahal</a><br>
+              <a href="redfort.html">2.Red Fort</a><br>
+              <a href="lotustemple.html">3.Lotus Temple</a><br>
+              <a href="qutubminar.html">4.Qutub Minar</a><br>
+              <a href="victoriamemorial.html">5.Victoria Memorial</a><br>
+              <a href="gatewayofindia.html">6.Gateway of India</a><br>
+              <a href="charminar.html">7.Charminar</a><br>
+              <a href="hawamahal.html">8.Hawa Mahal</a><br>
+              <a href="mysorepalace.html">9.Mysore Palace</a><br>
+              <a href="cst.html">10.CST</a><br>
+              <a href="about.html">About Us</a><br><hr class="visible-xs">
             </section>
 <! –– IMPORTANT SITES ––>
         		<section id="important-sites" class="col-sm-4">
@@ -147,7 +148,7 @@ The Gateway of India is located on the waterfront at Apollo Bunder area at the e
 <! –– ABOUT US ––>
         		<section id="about" class="col-sm-4">
           			<p>Contact Us:<br>
-          			<a href="https://rk2962002.github.io/my-site/index.html" target="_blank">Rohit Kumar</a><br><a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
+          			<a href="https://rk2962002.github.io/site/page1.html" target="_blank">Rohit Kumar</a><br><a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
           			<a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp;9084950475</a><br>
           			<a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;rohit.19b101051@abes.ac.in</a><br><br>Follows Us:<br>
         			<a href="https://www.facebook.com/profile.php?id=100040466752176" target="_blank" class="fa fa-facebook"></a>&nbsp;
