--- a/monuments.html
+++ b/monuments.html
@@ -26,8 +26,8 @@
     <div class="header-name" id="head-name">Monuments of India
     <div class="header-button">
         <a class="active" href="monuments.html">Home</a>
-        <a class="active" href="#contact">Contact</a>
-        <a class="active" href="#about">About</a>
+        <a class="active" href="https://rk2962002.github.io/site/page1.html">Contact</a>
+        <a class="active" href="about.html">About</a>
       </div>
       </div>
       </p>
@@ -35,17 +35,17 @@
 <! –– MENU BAR ––>
   <div>
     <ul class="links">
-        <li><a href="monuments.html" title="Monuments of India" target="_blank">Home</a></li>
-        <li><a href="tajmahal.html" title="Taj Mahal" target="_blank">1</a></li>
-        <li><a href="redfort.html" title="Red Fort" target="_blank">2</a></li>
-        <li><a href="lotustemple.html" title="Lotus Temple" target="_blank">3</a></li>
-        <li><a href="qutubminar.html" title="Qutub Minar" target="_blank">4</a></li>
-        <li><a href="victoriamemorial.html" title="Victoria Memorial" target="_blank">5</a></li>
-        <li><a href="gatewayofindia.html" title="Gateway of India" target="_blank">6</a></li>
-        <li><a href="charminar.html" title="Charminar" target="_blank">7</a></li>
-        <li><a href="hawamahal.html" title="Hawa Mahal" target="_blank">8</a></li>
-        <li><a href="mysorepalace.html" title="Mysore Palace" target="_blank">9</a></li>
-        <li><a href="cst.html" title="CST" target="_blank">10</a></li>
+        <li><a href="monuments.html" title="Monuments of India" >Home</a></li>
+        <li><a href="tajmahal.html" title="Taj Mahal" >1</a></li>
+        <li><a href="redfort.html" title="Red Fort" >2</a></li>
+        <li><a href="lotustemple.html" title="Lotus Temple" >3</a></li>
+        <li><a href="qutubminar.html" title="Qutub Minar" >4</a></li>
+        <li><a href="victoriamemorial.html" title="Victoria Memorial" >5</a></li>
+        <li><a href="gatewayofindia.html" title="Gateway of India" >6</a></li>
+        <li><a href="charminar.html" title="Charminar" >7</a></li>
+        <li><a href="hawamahal.html" title="Hawa Mahal" >8</a></li>
+        <li><a href="mysorepalace.html" title="Mysore Palace" >9</a></li>
+        <li><a href="cst.html" title="CST" >10</a></li>
     </ul>
   </div>
 <! –– TOP BUTTON ––>
@@ -143,17 +143,18 @@
           <div class="row footer-text">
 <! –– MONUMENTS LIST ––>
             <section id="monuments-list" class="col-sm-4">
-              <span><a href="monuments.html" target="_blank">Home Page</a></span><br>
-              <a href="tajmahal.html" target="_blank">1.Taj Mahal</a><br>
-              <a href="redfort.html" target="_blank">2.Red Fort</a><br>
-              <a href="lotustemple.html" target="_blank">3.Lotus Temple</a><br>
-              <a href="qutubminar.html" target="_blank">4.Qutub Minar</a><br>
-              <a href="victoriamemorial.html" target="_blank">5.Victoria Memorial</a><br>
-              <a href="gatewayofindia.html" target="_blank">6.Gateway of India</a><br>
-              <a href="charminar.html" target="_blank">7.Charminar</a><br>
-              <a href="hawamahal.html" target="_blank">8.Hawa Mahal</a><br>
-              <a href="mysorepalace.html" target="_blank">9.Mysore Palace</a><br>
-              <a href="cst.html" target="_blank">10.CST</a><br><hr class="visible-xs">
+              <a href="monuments.html">Home Page</a><br>
+              <a href="tajmahal.html">1.Taj Mahal</a><br>
+              <a href="redfort.html">2.Red Fort</a><br>
+              <a href="lotustemple.html">3.Lotus Temple</a><br>
+              <a href="qutubminar.html">4.Qutub Minar</a><br>
+              <a href="victoriamemorial.html">5.Victoria Memorial</a><br>
+              <a href="gatewayofindia.html">6.Gateway of India</a><br>
+              <a href="charminar.html">7.Charminar</a><br>
+              <a href="hawamahal.html">8.Hawa Mahal</a><br>
+              <a href="mysorepalace.html">9.Mysore Palace</a><br>
+              <a href="cst.html">10.CST</a><br>
+              <a href="about.html">About Us</a><br><hr class="visible-xs">
             </section>
 <! –– IMPORTANT SITES ––>
             <section id="important-sites" class="col-sm-4">
@@ -171,7 +172,7 @@
 <! –– ABOUT US ––>
             <section id="about" class="col-sm-4">
                 <p>Contact Us:<br>
-                <a href="https://rk2962002.github.io/my-site/index.html" target="_blank">Rohit Kumar</a><br><a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
+                <a href="https://rk2962002.github.io/site/page1.html" target="_blank">Rohit Kumar</a><br><a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
                 <a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp;9084950475</a><br>
                 <a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;rohit.19b101051@abes.ac.in</a><br><br>Follows Us:<br>
               <a href="https://www.facebook.com/profile.php?id=100040466752176" target="_blank" class="fa fa-facebook"></a>&nbsp;
