--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
     }
   </script>
 <! –– BODY ––>
-  <div id="body-text-1"><div class="body-title-1">About Us</div>Created and Hosted by : Rohit Kumar<br><q>I love to learn about new technologies and would like to contribute alongwith upgrading my skills and knowledge.</q><br># Ghaziabad,UP<br># A Web Developer<br># B.Tech/Computer Science and Engineering<br># ABES Engineering College,Ghaziabad.<br>For More Details Refer to Contact Section at the top of Page Or Check Out below:</div>
+  <div id="body-text-1"><div class="body-title-1">About Us</div><br>Created and Hosted by : Rohit Kumar<br><q>I love to learn about new technologies and would like to contribute alongwith upgrading my skills and knowledge.</q><br># Ghaziabad,UP<br># A Web Developer<br># B.Tech/Computer Science and Engineering<br># ABES Engineering College,Ghaziabad.<br>For More Details Refer to Contact Section at the top of Page Or Check Out below:</div>
   <hr width="100%">
   <div id="body-text-1"><div class="body-title-1">References</div><br><span>All the Materials Used in Making this sites are copy from these references sites and no material can be presented in prohibited way</span>
     <span class="referen"><br>
