--- a/charminar.html
+++ b/charminar.html
@@ -116,46 +116,44 @@
     	<div class="container">
       		<div class="row footer-text">
 <! –– MONUMENTS LIST ––>
-            <section id="monuments-list" class="col-sm-4">
-              <a href="monuments.html">Home Page</a><br>
-              <a href="tajmahal.html">1.Taj Mahal</a><br>
-              <a href="redfort.html">2.Red Fort</a><br>
-              <a href="lotustemple.html">3.Lotus Temple</a><br>
-              <a href="qutubminar.html">4.Qutub Minar</a><br>
-              <a href="victoriamemorial.html">5.Victoria Memorial</a><br>
-              <a href="gatewayofindia.html">6.Gateway of India</a><br>
-              <a href="charminar.html">7.Charminar</a><br>
-              <a href="hawamahal.html">8.Hawa Mahal</a><br>
-              <a href="mysorepalace.html">9.Mysore Palace</a><br>
-              <a href="cst.html">10.CST</a><br>
-              <a href="about.html">About Us</a><br><hr class="visible-xs">
-            </section>
+  <section id="monuments-list" class="col-sm-4">
+    <a href="monuments.html">Home Page</a><br>
+    <a href="tajmahal.html">1.Taj Mahal</a><br>
+    <a href="redfort.html">2.Red Fort</a><br>
+    <a href="lotustemple.html">3.Lotus Temple</a><br>
+    <a href="qutubminar.html">4.Qutub Minar</a><br>
+    <a href="victoriamemorial.html">5.Victoria Memorial</a><br>
+    <a href="gatewayofindia.html">6.Gateway of India</a><br>
+    <a href="charminar.html">7.Charminar</a><br>
+    <a href="hawamahal.html">8.Hawa Mahal</a><br>
+    <a href="mysorepalace.html">9.Mysore Palace</a><br>
+    <a href="cst.html">10.CST</a><br>
+    <a href="about.html">About Us</a><br><hr class="visible-xs">
+  </section>
 <! –– IMPORTANT SITES ––>
-        		<section id="important-sites" class="col-sm-4">
-          			<span>Important Sites</span><br>
-          			<a href="https://www.india.gov.in/" target="_blank">1.Government of India<br>
-          			<a href="http://tourism.gov.in/" target="_blank">2.Ministry of Tourism<br>
-          			<a href="http://asi.nic.in/" target="_blank">2.Archaeological Survey of India<br>
-          			<a href="https://www.google.com/maps" target="_blank">4.Google Maps<br>
-          			<a href="https://www.wikipedia.org/" target="_blank">5.Wikipedia<br>
-          			<a href="https://en.unesco.org/" target="_blank">6.UNESCO<br>
-          			<a href="#projrctreport" target="_blank">7.Project Report<br>
-          			<a href="https://www.webfreecounter.com/" target="_blank">Visitor No: <img src="https://www.webfreecounter.com/hit.php?id=guaoknq&nd=6&style=121" border="0" alt="free counter"></a>
-          			<hr class="visible-xs">
-        		</section>
+  <section id="important-sites" class="col-sm-4">
+    <span>Important Sites</span><br>
+    <a href="https://www.india.gov.in/" target="_blank">1.Government of India<br>
+    <a href="http://tourism.gov.in/" target="_blank">2.Ministry of Tourism<br>
+    <a href="http://asi.nic.in/" target="_blank">2.Archaeological Survey of India<br>
+    <a href="https://www.google.com/maps" target="_blank">4.Google Maps<br>
+    <a href="https://www.wikipedia.org/" target="_blank">5.Wikipedia<br>
+    <a href="https://en.unesco.org/" target="_blank">6.UNESCO<br>
+    <a href="#projrctreport" target="_blank">7.Project Report<br>
+    <a href="https://www.webfreecounter.com/" target="_blank">Visitor No: <img src="https://www.webfreecounter.com/hit.php?id=guaoknq&nd=6&style=121" border="0" alt="free counter"></a>
+    <hr class="visible-xs">
+  </section>
 <! –– ABOUT US ––>
-        		<section id="about" class="col-sm-4">
-          			<p>Contact Us:<br>
-          			<a href="https://rk2962002.github.io/site/page1.html" target="_blank">Rohit Kumar</a><br><a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
-          			<a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp;9084950475</a><br>
-          			<a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;rohit.19b101051@abes.ac.in</a><br><br>Follows Us:<br>
-        			<a href="https://www.facebook.com/profile.php?id=100040466752176" target="_blank" class="fa fa-facebook"></a>&nbsp;
-					<a href="https://twitter.com/rk2962002" target="_blank" class="fa fa-twitter"></a>&nbsp;
-					<a href="https://www.linkedin.com/in/rohit-kumar-28494415a/" target="_blank" class="fa fa-linkedin"></a>&nbsp;
-					<a href="https://www.instagram.com/rk__rohitkumar/" target="_blank" class="fa fa-instagram"></a>
-					</p>
-        		</section>
-      		</div>
+  <section id="about" class="col-sm-4">
+    <p>Contact Us:<br>
+    <a href="https://rk2962002.github.io/site/page1.html" target="_blank">Rohit Kumar</a><br><a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
+    <a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp;9084950475</a><br>
+    <a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;rohit.19b101051@abes.ac.in</a><br><br>Follows Us:<br>
+    <a href="https://www.facebook.com/profile.php?id=100040466752176" title="Facebook" target="_blank" class="fa fa-facebook"></a>&nbsp;
+    <a href="https://twitter.com/rk2962002" title="Twitter" target="_blank" class="fa fa-twitter"></a>&nbsp;
+    <a href="https://www.linkedin.com/in/rohit-kumar-28494415a/" title="LinkedIN" target="_blank" class="fa fa-linkedin"></a>&nbsp;
+    <a href="https://www.instagram.com/rk__rohitkumar/" title="Instagram" target="_blank" class="fa fa-instagram"></a></p>
+  </section></div>
 <! –– COPYRIGHT ––>
       		<div class="text-center">&copy; Copyright Rohit Kumar|Charminar|2020<br>
       			<marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar&nbsp;&nbsp;&nbsp;&nbsp;Thanks for Visiting&nbsp;&nbsp;&nbsp;&nbsp;Visit Again</marquee>
