--- a/charminar.html
+++ b/charminar.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
+   <link rel="icon" href="background-img/H.png" sizes="40x40">
 </head>
 <body>
 <! –– HEADER ––>
