--- a/monuments.html
+++ b/monuments.html
@@ -47,6 +47,7 @@
         <li><a href="hawamahal.html" title="Hawa Mahal" >8</a></li>
         <li><a href="mysorepalace.html" title="Mysore Palace" >9</a></li>
         <li><a href="cst.html" title="CST" >10</a></li>
+        <li><a href="about.html" title="About Us" >About Us</a></li>
     </ul>
   </div>
 <! –– TOP BUTTON ––>
@@ -174,8 +175,8 @@
   <section id="about" class="col-sm-4">
     <p>Contact Us:<br>
     <a href="https://rk2962002.github.io/site/page1.html" target="_blank">Rohit Kumar</a><br><a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
-    <a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp;9084950475</a><br>
-    <a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;rohit.19b101051@abes.ac.in</a><br><br>Follows Us:<br>
+    <a href="tel:9084950XXX"><span class="glyphicon glyphicon-earphone"></span>&nbsp;9084950XXX</a><br>
+    <a href = "mailto: rohit.19b1010XX@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;rohit.19b1010XX@abes.ac.in</a><br><br>Follows Us:<br>
     <a href="https://www.facebook.com/profile.php?id=100040466752176" title="Facebook" target="_blank" class="fa fa-facebook"></a>&nbsp;
     <a href="https://twitter.com/rk2962002" title="Twitter" target="_blank" class="fa fa-twitter"></a>&nbsp;
     <a href="https://www.linkedin.com/in/rohit-kumar-28494415a/" title="LinkedIN" target="_blank" class="fa fa-linkedin"></a>&nbsp;
