--- a/monuments.html
+++ b/monuments.html
@@ -1,4 +1,5 @@
 <! –– HTML CODING FOR MONUMENTS (monuments.html) ––>
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -22,17 +23,19 @@
 </head>
 <body>
 <! –– HEADER ––>
+
   <div class="header">
     <p class="header" id="head">
     <div class="header-name" id="head-name">Monuments of India
     <div class="header-button">
         <a class="active" href="monuments.html">Home</a>
-        <a class="active" href="https://rk2962002.github.io/site/page1.html">Contact</a>
+        <a class="active" href="https://bit.ly/rk-website">Contact</a>
         <a class="active" href="about.html">About</a>
       </div>
       </div>
       </p>
     </div>
+
 <! –– MENU BAR ––>
   <div>
     <ul class="links">
@@ -48,8 +51,10 @@
         <li><a href="mysorepalace.html" title="Mysore Palace" >9</a></li>
         <li><a href="cst.html" title="CST" >10</a></li>
         <li><a href="about.html" title="About Us" >About Us</a></li>
+        <li><a href="https://www.irctc.co.in/nget/train-search" target="_blank" title="IRCTC eTicketing System" >IRCTC</a></li>
     </ul>
   </div>
+
 <! –– TOP BUTTON ––>
   <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
   <script>
@@ -68,6 +73,7 @@
       document.documentElement.scrollTop = 0;
       }
   </script>
+
 <! –– IMAGE SLIDESHOW ––>
   <div class="slideshow-container">
       <div class="mySlides fade">
@@ -136,6 +142,7 @@
       setTimeout(showSlides, 1000); // Change image every 1 seconds
     }
   </script>
+
 <! –– BODY ––>
   <div id="body-text"><div class="body-title">Monuments of India</div>India is one of the most beautiful countries in the world and is best known for its colourful culture and fascinating heritage. Its grand monuments, like the Taj Mahal act as strong pillars of the rich and deep history that India possesses. From their splendid architecture to a strong legacy, the historical monuments of India speak volumes. Most of these Indian monuments were primarily built under the regime of Rajputana, Dravidian and Mughal emperors. The monuments of India are speaking stones of the glory of its rulers and the brilliance of artisans in ancient India. Due to the incredible beauty of India and the constant efforts of the government in maintaining the heritage sites, India tourism has flourished rapidly witnessing an increase in the number of travellers from all around the world. Some of the well-preserved monuments in the different parts of the country are Red Fort (North), Sun Temple Konark (East), Amer Fort (West) and Charminar (South).<br>Indian monuments are popular worldwide for its beauty. The monuments are the standing examples of stretching the horizon of human imagination and thoughts. The kings and emperors who ruled India had their own way of expressing their ideas in bricks, marble, stone and mortars. These monuments are centuries old and have been examples of philosophies in the world. There are few famous monuments that are damaged during wars between kingdoms and foreign invasion. Visiting these places today tells you a lot of history and the culture in the bygone age.<br><br>Check Out the links for more details given below:</div>
   <hr width="100%">
@@ -143,6 +150,7 @@
   <footer class="panel-footer ">
       <div class="container">
           <div class="row footer-text">
+
 <! –– MONUMENTS LIST ––>
   <section id="monuments-list" class="col-sm-4">
     <a href="monuments.html">Home Page</a><br>
@@ -158,6 +166,7 @@
     <a href="cst.html">10.CST</a><br>
     <a href="about.html">About Us</a><br><hr class="visible-xs">
   </section>
+
 <! –– IMPORTANT SITES ––>
   <section id="important-sites" class="col-sm-4">
     <span>Important Sites</span><br>
@@ -167,26 +176,32 @@
     <a href="https://www.google.com/maps" target="_blank">4.Google Maps<br>
     <a href="https://www.wikipedia.org/" target="_blank">5.Wikipedia<br>
     <a href="https://en.unesco.org/" target="_blank">6.UNESCO<br>
-    <a href="#projrctreport" target="_blank">7.Project Report<br>
+    <a href="https://www.irctc.co.in/nget/train-search" target="_blank">7.IRCTC<br>
+    <a href="#projrctreport" target="_blank">8.Project Report<br><br>
     <a href="https://www.webfreecounter.com/" target="_blank">Visitor No: <img src="https://www.webfreecounter.com/hit.php?id=guaoknq&nd=6&style=121" border="0" alt="free counter"></a>
     <hr class="visible-xs">
   </section>
+
 <! –– ABOUT US ––>
   <section id="about" class="col-sm-4">
     <p>Contact Us:<br>
-    <a href="https://rk2962002.github.io/site/page1.html" target="_blank">Rohit Kumar</a><br><a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
-    <a href="tel:9084950XXX"><span class="glyphicon glyphicon-earphone"></span>&nbsp;9084950XXX</a><br>
-    <a href = "mailto: rohit.19b1010XX@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;rohit.19b1010XX@abes.ac.in</a><br><br>Follows Us:<br>
-    <a href="https://www.facebook.com/profile.php?id=100040466752176" title="Facebook" target="_blank" class="fa fa-facebook"></a>&nbsp;
-    <a href="https://twitter.com/rk2962002" title="Twitter" target="_blank" class="fa fa-twitter"></a>&nbsp;
-    <a href="https://www.linkedin.com/in/rohit-kumar-28494415a/" title="LinkedIN" target="_blank" class="fa fa-linkedin"></a>&nbsp;
-    <a href="https://www.instagram.com/rk__rohitkumar/" title="Instagram" target="_blank" class="fa fa-instagram"></a></p>
+    <a href="https://bit.ly/rk-website" target="_blank">Rohit Kumar</a><br>
+    <a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
+    <a href="tel:9084950XXX"><span class="glyphicon glyphicon-earphone"></span>9084950XXX</a><br>
+    <a href = "mailto: rohit.19b1010XX@abes.ac.in"><span class="glyphicon glyphicon-envelope">		</span>rohit.19b1010XX@abes.ac.in</a><br><br>Follows Us:<br>
+    <a href="https://bit.ly/rk-facebook" title="Facebook" target="_blank" class="fa fa-facebook"></a>
+    <a href="https://bit.ly/rk-twitter" title="Twitter" target="_blank" class="fa fa-twitter"></a>
+    <a href="https://bit.ly/rk-linkedIN" title="LinkedIN" target="_blank" class="fa fa-linkedin"></a>
+    <a href="https://bit.ly/rk-instagram" title="Instagram" target="_blank" class="fa fa-instagram"></a>
+     <a href="https://bit.ly/rk-github" title="GitHub" target="_blank" class="fa fa-github"></a></p></p>
   </section></div>
+
 <! –– COPYRIGHT ––>
           <div class="text-center">&copy; Copyright Rohit Kumar|Monuments of India|2020<br>
             <marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar&nbsp;&nbsp;&nbsp;&nbsp;Thanks for Visiting&nbsp;&nbsp;&nbsp;&nbsp;Visit Again</marquee>
           </div>
       </div>
+
   </footer>
 </body>
 </html>
