--- a/monuments.html
+++ b/monuments.html
@@ -23,18 +23,16 @@
 </head>
 <body>
 <! –– HEADER ––>
-
   <div class="header">
-    <p class="header" id="head">
     <div class="header-name" id="head-name">Monuments of India
     <div class="header-button">
         <a class="active" href="monuments.html">Home</a>
         <a class="active" href="https://bit.ly/rk-website">Contact</a>
         <a class="active" href="about.html">About</a>
-      </div>
-      </div>
-      </p>
     </div>
+    <h3>( A TOURIST GUIDE WEBSITE )</h3>
+    </div>
+  </div>
 
 <! –– MENU BAR ––>
   <div>
