--- a/monuments.html
+++ b/monuments.html
@@ -176,22 +176,22 @@
     <a href="https://en.unesco.org/" target="_blank">6.UNESCO<br>
     <a href="https://www.irctc.co.in/nget/train-search" target="_blank">7.IRCTC<br>
     <a href="#projrctreport" target="_blank">8.Project Report<br><br>
-    <a href="https://www.webfreecounter.com/" target="_blank">Visitor No: <img src="https://www.webfreecounter.com/hit.php?id=guaoknq&nd=6&style=121" border="0" alt="free counter"></a>
+    <a href="https://www.webfreecounter.com/" target="_blank">Visitor No: <img src="https://www.webfreecounter.com/hit.php?id=gerefqdfx&nd=6&style=8" border="0" alt="free counter"></a>
     <hr class="visible-xs">
   </section>
 
 <! –– ABOUT US ––>
   <section id="about" class="col-sm-4">
     <p>Contact Us:<br>
-    <a href="https://bit.ly/rk-website" target="_blank">Rohit Kumar</a><br>
+    <a href="https://rebrand.ly/rk/website" target="_blank">Rohit Kumar</a><br>
     <a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
     <a href="tel:9084950XXX"><span class="glyphicon glyphicon-earphone"></span>9084950XXX</a><br>
     <a href = "mailto: rohit.19b1010XX@abes.ac.in"><span class="glyphicon glyphicon-envelope">		</span>rohit.19b1010XX@abes.ac.in</a><br><br>Follows Us:<br>
-    <a href="https://bit.ly/rk-facebook" title="Facebook" target="_blank" class="fa fa-facebook"></a>
-    <a href="https://bit.ly/rk-twitter" title="Twitter" target="_blank" class="fa fa-twitter"></a>
-    <a href="https://bit.ly/rk-linkedIN" title="LinkedIN" target="_blank" class="fa fa-linkedin"></a>
-    <a href="https://bit.ly/rk-instagram" title="Instagram" target="_blank" class="fa fa-instagram"></a>
-     <a href="https://bit.ly/rk-github" title="GitHub" target="_blank" class="fa fa-github"></a></p></p>
+    <a href="https://rebrand.ly/rk/facebook" title="Facebook" target="_blank" class="fa fa-facebook"></a>
+    <a href="https://rebrand.ly/rk/twitter" title="Twitter" target="_blank" class="fa fa-twitter"></a>
+    <a href="https://rebrand.ly/rk/linkedin" title="LinkedIN" target="_blank" class="fa fa-linkedin"></a>
+    <a href="https://rebrand.ly/rk/instagram" title="Instagram" target="_blank" class="fa fa-instagram"></a>
+     <a href="https://rebrand.ly/rk/github" title="GitHub" target="_blank" class="fa fa-github"></a></p></p>
   </section></div>
 
 <! –– COPYRIGHT ––>
