--- a/monuments.html
+++ b/monuments.html
@@ -8,7 +8,7 @@
       background:transparent url('background-img/A.jpg') repeat center top;
     }
   </style>
-  <title>Monuments of India</title>
+  <title>Home | Monuments of India</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,10 +27,10 @@
     <div class="header-name" id="head-name">Monuments of India
     <div class="header-button">
         <a class="active" href="monuments.html">Home</a>
-        <a class="active" href="https://bit.ly/rk-website">Contact</a>
+        <a class="active" href="https://rebrand.ly/rk/website">Contact</a>
         <a class="active" href="about.html">About</a>
     </div>
-    <h3>( A TOURIST GUIDE WEBSITE )</h3>
+    <h3>( A TRAVEL WEBSITE )</h3>
     </div>
   </div>
 
@@ -49,7 +49,9 @@
         <li><a href="mysorepalace.html" title="Mysore Palace" >9</a></li>
         <li><a href="cst.html" title="CST" >10</a></li>
         <li><a href="about.html" title="About Us" >About Us</a></li>
-        <li><a href="https://www.irctc.co.in/nget/train-search" target="_blank" title="IRCTC eTicketing System" >IRCTC</a></li>
+        <li><a href="https://www.irctc.co.in/nget/train-search" target="_blank" title="Visit Website of IRCTC eTicketing System" >IRCTC</a></li>
+        <li><a href="https://www.oyorooms.com/" target="_blank" title="Visit Website of OYO Rooms" >OYO Rooms</a></li>
+        <li><a href="https://www.yatra.com/" target="_blank" title="Visit Website of Yatra" >Yatra</a></li>
     </ul>
   </div>
 
@@ -137,13 +139,25 @@
         }
       slides[slideIndex-1].style.display = "block";  
       dots[slideIndex-1].className += " active";
-      setTimeout(showSlides, 1000); // Change image every 1 seconds
+      setTimeout(showSlides, 1000); 
     }
   </script>
 
 <! –– BODY ––>
-  <div id="body-text"><div class="body-title">Monuments of India</div>India is one of the most beautiful countries in the world and is best known for its colourful culture and fascinating heritage. Its grand monuments, like the Taj Mahal act as strong pillars of the rich and deep history that India possesses. From their splendid architecture to a strong legacy, the historical monuments of India speak volumes. Most of these Indian monuments were primarily built under the regime of Rajputana, Dravidian and Mughal emperors. The monuments of India are speaking stones of the glory of its rulers and the brilliance of artisans in ancient India. Due to the incredible beauty of India and the constant efforts of the government in maintaining the heritage sites, India tourism has flourished rapidly witnessing an increase in the number of travellers from all around the world. Some of the well-preserved monuments in the different parts of the country are Red Fort (North), Sun Temple Konark (East), Amer Fort (West) and Charminar (South).<br>Indian monuments are popular worldwide for its beauty. The monuments are the standing examples of stretching the horizon of human imagination and thoughts. The kings and emperors who ruled India had their own way of expressing their ideas in bricks, marble, stone and mortars. These monuments are centuries old and have been examples of philosophies in the world. There are few famous monuments that are damaged during wars between kingdoms and foreign invasion. Visiting these places today tells you a lot of history and the culture in the bygone age.<br><br>Check Out the links for more details given below:</div>
+  <div id="body-text"><div class="body-title">Monuments of India</div>India is one of the most beautiful countries in the world and is best known for its colourful culture and fascinating heritage. Its grand monuments, like the Taj Mahal act as strong pillars of the rich and deep history that India possesses. From their splendid architecture to a strong legacy, the historical monuments of India speak volumes. Most of these Indian monuments were primarily built under the regime of Rajputana, Dravidian and Mughal emperors. The monuments of India are speaking stones of the glory of its rulers and the brilliance of artisans in ancient India. Due to the incredible beauty of India and the constant efforts of the government in maintaining the heritage sites, India tourism has flourished rapidly witnessing an increase in the number of travellers from all around the world. Some of the well-preserved monuments in the different parts of the country are Red Fort (North), Sun Temple Konark (East), Amer Fort (West) and Charminar (South).<br>Indian monuments are popular worldwide for its beauty. The monuments are the standing examples of stretching the horizon of human imagination and thoughts. The kings and emperors who ruled India had their own way of expressing their ideas in bricks, marble, stone and mortars. These monuments are centuries old and have been examples of philosophies in the world. There are few famous monuments that are damaged during wars between kingdoms and foreign invasion. Visiting these places today tells you a lot of history and the culture in the bygone age.</div>
+
+  <div id="body-text"><div class="body-title">Historical Places in India</div>The ancient monuments of India are globally popular for their architectural brilliance. And, the marble inlay and stone carving work displayed through these centuries-old monuments is incomparable. So, if you’re looking for holidays in India then plan a tour of historical places in India. In the state of Rajasthan, the monuments narrate the tales of strength, romance and bravery. While visiting these masterpieces, one can feel the aura and power of the ancient Indian rulers. <br>Also, tourists will get to know that religion plays a significant role in Indian culture. And, the diversity of religions is clearly evident in the historical monuments too. <br>The prominent cities of India as Mumbai, Delhi and Agra also have a lot to offer history lovers. With wonderful Mughal architecture dipped in the essence of Islam, the charm of Delhi never fades in terms of enticing the travellers. India Gate, Jama Masjid, Pura Qila, Lodi Tomb and Jantar Mantar are some of the most famous monuments in Delhi. <br>The list of well-known monuments in Agra includes Agra Fort, Mariam's Tomb, Panch Mahal and Marium-uz-Zamani Palace and the Taj Mahal - one of the seven wonders of the world. Some key heritage monuments in Mumbai are Elephanta Caves, Gateway of India and Chhatrapati Shivaji Terminus.</div>
+
+  <div id="body-text"><div class="body-title">Famous Monuments of India</div>If you are a history buff, monuments like Mysore Palace, Sanchi Stupa, Fatehpur Sikri and Hawa Mahal should feature on your must-visit monuments in India. Situated in the Mysore city of Karnataka, Mysore Palace is a royal residence of Wadiyar dynasty. The great Sanchi Stupa in Bhopal is among the most striking Buddhist monuments in India. <br>Built during the Mauryan period it reflects a perfect blend of Buddhist art and architecture. The sprawling Fatehpur Sikri complex was built by the Mughal emperor, Akbar, in the 16th century. With the UNESCO world heritage site status, the architecture of Fatehpur Sikri showcases a perfect amalgamation of Persian and Hindu architecture. Hawa Mahal, located in the heart of Pink City, Jaipur, is a unique honeycomb structure said to reflect the royalty of Rajput ruler, Maharaja Sawai Pratap Singh.</div>
+
+  <div id="body-text"><div class="body-title">National Monuments of India</div>Among the most popular national monuments of India are the Red Fort, Taj Mahal, Qutub Minar, Humayun's Tomb, Sun Temple Konark and Hampi. Built in the 16th century, the Red Fort in Delhi is known to transport the visitors back to the era of Mughal dynasty. <br>The icon of immortal love – The Taj Mahal, a white-marbled marvel, situated on the banks of River Yamuna in the city of Agra, never fails to mesmerize. Also, Humayun's Tomb of Delhi is considered as the finest example of Persian architecture. Further, Odisha’s Konark Sun Temple, which is constructed in the shape of a colossal chariot, is a UNESCO world heritage site. Once known as the capital of the Vijayanagar Empire, Hampi is the most popular tourist attraction in Karnataka. Constructed in the14th century, its ruins are now a UNESCO world heritage site. Undoubtedly, Indian monuments are the pride of the nation!<br><br>Check Out the links for more details given below:</div>
   <hr width="100%">
+  <ul class="reference container-fluid">
+	<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe  src="https://www.youtube.com/embed/b9STkhzN9qM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
+	<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.youtube.com/embed/DK0WakxiPs8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
+	<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.youtube.com/embed/7PtOQrXUNLI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
+  </ul><hr width="100%">
+
 <! –– FOOTER ––>
   <footer class="panel-footer ">
       <div class="container">
@@ -176,7 +190,7 @@
     <a href="https://en.unesco.org/" target="_blank">6.UNESCO<br>
     <a href="https://www.irctc.co.in/nget/train-search" target="_blank">7.IRCTC<br>
     <a href="#projrctreport" target="_blank">8.Project Report<br><br>
-    <a href="https://www.webfreecounter.com/" target="_blank">Visitor No: <img src="https://www.webfreecounter.com/hit.php?id=gerefqdfx&nd=6&style=8" border="0" alt="free counter"></a>
+    <a href="#">Visitor No. :<img src="https://www.webfreecounter.com/hit.php?id=gefqkxo&nd=6&style=121" border="0" alt="visitor counter"></a>
     <hr class="visible-xs">
   </section>
 
@@ -186,12 +200,14 @@
     <a href="https://rebrand.ly/rk/website" target="_blank">Rohit Kumar</a><br>
     <a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
     <a href="tel:9084950XXX"><span class="glyphicon glyphicon-earphone"></span>9084950XXX</a><br>
-    <a href = "mailto: rohit.19b1010XX@abes.ac.in"><span class="glyphicon glyphicon-envelope">		</span>rohit.19b1010XX@abes.ac.in</a><br><br>Follows Us:<br>
+    <a href = "mailto: r.k296XXXX@gmail.com"><span class="glyphicon glyphicon-envelope"></span>r.k296XXXX@gmail.com</a><br> 
+    <br>Follows Us:<br>
     <a href="https://rebrand.ly/rk/facebook" title="Facebook" target="_blank" class="fa fa-facebook"></a>
     <a href="https://rebrand.ly/rk/twitter" title="Twitter" target="_blank" class="fa fa-twitter"></a>
     <a href="https://rebrand.ly/rk/linkedin" title="LinkedIN" target="_blank" class="fa fa-linkedin"></a>
     <a href="https://rebrand.ly/rk/instagram" title="Instagram" target="_blank" class="fa fa-instagram"></a>
-     <a href="https://rebrand.ly/rk/github" title="GitHub" target="_blank" class="fa fa-github"></a></p></p>
+    <a href="https://rebrand.ly/rk/github" title="GitHub" target="_blank" class="fa fa-github"></a>
+    <a href="https://rebrand.ly/rk/whatapp" title="WhatsApp" target="_blank" class="fa fa-whatsapp"></a></p></p>
   </section></div>
 
 <! –– COPYRIGHT ––>
