--- a/redfort.html
+++ b/redfort.html
@@ -7,7 +7,7 @@
       background:transparent url('background-img/B.jpg') repeat center top;
     }
   </style>
-	<title>Red Fort</title>
+	<title>Red Fort | Monuments of India</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +27,7 @@
 		<div class="header-name" id="head-name">Red Fort
 		<div class="header-button">
     		<a class="active" href="monuments.html">Home</a>
-    		<a class="active" href="https://rk2962002.github.io/site/page1.html">Contact</a>
+    		<a class="active" href="https://rebrand.ly/rk/website">Contact</a>
     		<a class="active" href="about.html">About</a>
     	</div>
     	</div>
@@ -42,6 +42,9 @@
  	 	    <li><a href="https://en.wikipedia.org/wiki/Red_Fort" target="_blank">Wikipedia</a></li>
   			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Red_Fort" target="_blank">Detail Download</a></li>
   			<li><a href="https://goo.gl/maps/R7iV7duKC4TyTJ2D6" target="_blank">360 Tour</a></li>
+        <li><a href="https://www.irctc.co.in/nget/train-search" target="_blank" title="Visit Website of IRCTC eTicketing System" >IRCTC</a></li>
+        <li><a href="https://www.oyorooms.com/" target="_blank" title="Visit Website of OYO Rooms" >OYO Rooms</a></li>
+        <li><a href="https://www.yatra.com/" target="_blank" title="Visit Website of Yatra" >Yatra</a></li>
 		</ul>
 	</div>
 <! –– TOP BUTTON ––>
@@ -111,6 +114,7 @@
 	<ul class="reference container-fluid">
 		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.youtube.com/embed/UA4VR4wc7cU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
 		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14004.383054257947!2d77.24382052385081!3d28.656851160351138!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfce26ec085ef%3A0x441e32f4fa5002fb!2sRed%20Fort!5e0!3m2!1sen!2sin!4v1591958618650!5m2!1sen!2sin" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
+    <li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!4v1603620938772!6m8!1m7!1sCAoSLEFGMVFpcE9PTU4ycWs5OFFGbWx3ZVRsTEVuMG5XRklvNWJfNzFCMVhUaE5J!2m2!1d28.6561076!2d77.23825769999999!3f25.75!4f25.319999999999993!5f0.7820865974627469" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
 	</ul><hr width="100%">
 <! –– FOOTER ––>
 	<footer class="panel-footer ">
