--- a/victoriamemorial.html
+++ b/victoriamemorial.html
@@ -7,7 +7,7 @@
       background:transparent url('background-img/E.jpg') repeat center top;
     }
   </style>
-	<title>Victoria Memorial</title>
+	<title>Victoria Memorial | Monuments of India</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +27,7 @@
 		<div class="header-name" id="head-name">Victoria Memorial
 		<div class="header-button">
     		<a class="active" href="monuments.html">Home</a>
-    		<a class="active" href="https://rk2962002.github.io/site/page1.html">Contact</a>
+    		<a class="active" href="https://rebrand.ly/rk/website">Contact</a>
     		<a class="active" href="about.html">About</a>
     	</div>
     	</div>
@@ -43,6 +43,9 @@
   			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Gateway_of_India" target="_blank">Detail Download</a></li>
   			<li><a href="http://victoriamemorial-cal.org/uploads/E-Catalogue-List/E-Catalogue%20of%20Johan%20Zoffany.pdf" target="_blank">E-Catalogue</a></li>
   			<li><a href="https://goo.gl/maps/rTgt4pwpkoJMbYc7A" target="_blank">360 Tour</a></li>
+        <li><a href="https://www.irctc.co.in/nget/train-search" target="_blank" title="Visit Website of IRCTC eTicketing System" >IRCTC</a></li>
+        <li><a href="https://www.oyorooms.com/" target="_blank" title="Visit Website of OYO Rooms" >OYO Rooms</a></li>
+        <li><a href="https://www.yatra.com/" target="_blank" title="Visit Website of Yatra" >Yatra</a></li>
 		</ul>
 	</div>
 <! –– TOP BUTTON ––>
@@ -112,6 +115,7 @@
 	<ul class="reference container-fluid">
 		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.youtube.com/embed/DyUpUXkGaJM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
 		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.9162937876185!2d88.34036911408167!3d22.544808185197155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a02771346ae015d%3A0xb540e4bce39763!2sVictoria%20Memorial!5e0!3m2!1sen!2sin!4v1592037147447!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
+    <li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!4v1603621344076!6m8!1m7!1sCAoSLEFGMVFpcE9yT0RFQm4yRF82Q2k5dWlLZi1ScUVyTkhyQUJaUUZ0NkNDX1JB!2m2!1d22.5454188!2d88.34264530000002!3f333.45!4f-1.1299999999999955!5f0.7820865974627469" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
 	</ul><hr width="100%">
 <! –– FOOTER ––>
 	<footer class="panel-footer ">
