--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
       background:transparent url('background-img/B.jpg') repeat center top;
     }
   </style>
-  <title>About Us</title>
+  <title>About Us | Monuments of India</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +27,7 @@
     <div class="header-name" id="head-name">About Us
     <div class="header-button">
         <a class="active" href="monuments.html">Home</a>
-        <a class="active" href="https://rk2962002.github.io/site/page1.html">Contact</a>
+        <a class="active" href="https://rebrand.ly/rk/website">Contact</a>
         <a class="active" href="about.html">About</a>
       </div>
       </div>
@@ -48,6 +48,9 @@
         <li><a href="mysorepalace.html" title="Mysore Palace" >9</a></li>
         <li><a href="cst.html" title="CST" >10</a></li>
         <li><a href="about.html" title="About Us" >About Us</a></li>
+        <li><a href="https://www.irctc.co.in/nget/train-search" target="_blank" title="Visit Website of IRCTC eTicketing System" >IRCTC</a></li>
+        <li><a href="https://www.oyorooms.com/" target="_blank" title="Visit Website of OYO Rooms" >OYO Rooms</a></li>
+        <li><a href="https://www.yatra.com/" target="_blank" title="Visit Website of Yatra" >Yatra</a></li>
     </ul>
   </div>
 <! –– TOP BUTTON ––>
@@ -156,11 +159,60 @@
   <footer class="panel-footer ">
       <div class="container">
           <div class="row footer-text">
+
+<! –– MONUMENTS LIST ––>
+  <section id="monuments-list" class="col-sm-4">
+    <a href="monuments.html">Home Page</a><br>
+    <a href="tajmahal.html">1.Taj Mahal</a><br>
+    <a href="redfort.html">2.Red Fort</a><br>
+    <a href="lotustemple.html">3.Lotus Temple</a><br>
+    <a href="qutubminar.html">4.Qutub Minar</a><br>
+    <a href="victoriamemorial.html">5.Victoria Memorial</a><br>
+    <a href="gatewayofindia.html">6.Gateway of India</a><br>
+    <a href="charminar.html">7.Charminar</a><br>
+    <a href="hawamahal.html">8.Hawa Mahal</a><br>
+    <a href="mysorepalace.html">9.Mysore Palace</a><br>
+    <a href="cst.html">10.CST</a><br>
+    <a href="about.html">About Us</a><br><hr class="visible-xs">
+  </section>
+
+<! –– IMPORTANT SITES ––>
+  <section id="important-sites" class="col-sm-4">
+    <span>Important Sites</span><br>
+    <a href="https://www.india.gov.in/" target="_blank">1.Government of India<br>
+    <a href="http://tourism.gov.in/" target="_blank">2.Ministry of Tourism<br>
+    <a href="http://asi.nic.in/" target="_blank">2.Archaeological Survey of India<br>
+    <a href="https://www.google.com/maps" target="_blank">4.Google Maps<br>
+    <a href="https://www.wikipedia.org/" target="_blank">5.Wikipedia<br>
+    <a href="https://en.unesco.org/" target="_blank">6.UNESCO<br>
+    <a href="https://www.irctc.co.in/nget/train-search" target="_blank">7.IRCTC<br>
+    <a href="#projrctreport" target="_blank">8.Project Report<br><br>
+    <a href="#">Visitor No. :<img src="https://www.webfreecounter.com/hit.php?id=gefqkxo&nd=6&style=121" border="0" alt="visitor counter"></a>
+    <hr class="visible-xs">
+  </section>
+
+<! –– ABOUT US ––>
+  <section id="about" class="col-sm-4">
+    <p>Contact Us:<br>
+    <a href="https://rebrand.ly/rk/website" target="_blank">Rohit Kumar</a><br>
+    <a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br>
+    <a href="tel:9084950XXX"><span class="glyphicon glyphicon-earphone"></span>9084950XXX</a><br>
+    <a href = "mailto: r.k296XXXX@gmail.com"><span class="glyphicon glyphicon-envelope"></span>r.k296XXXX@gmail.com</a><br> 
+    <br>Follows Us:<br>
+    <a href="https://rebrand.ly/rk/facebook" title="Facebook" target="_blank" class="fa fa-facebook"></a>
+    <a href="https://rebrand.ly/rk/twitter" title="Twitter" target="_blank" class="fa fa-twitter"></a>
+    <a href="https://rebrand.ly/rk/linkedin" title="LinkedIN" target="_blank" class="fa fa-linkedin"></a>
+    <a href="https://rebrand.ly/rk/instagram" title="Instagram" target="_blank" class="fa fa-instagram"></a>
+    <a href="https://rebrand.ly/rk/github" title="GitHub" target="_blank" class="fa fa-github"></a>
+    <a href="https://rebrand.ly/rk/whatapp" title="WhatsApp" target="_blank" class="fa fa-whatsapp"></a></p></p>
+  </section></div>
+
 <! –– COPYRIGHT ––>
-          <div class="text-center">&copy; Copyright Rohit Kumar|About Us|2020<br>
+          <div class="text-center">&copy; Copyright Rohit Kumar|About|2020<br>
             <marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar&nbsp;&nbsp;&nbsp;&nbsp;Thanks for Visiting&nbsp;&nbsp;&nbsp;&nbsp;Visit Again</marquee>
           </div>
       </div>
+
   </footer>
 </body>
 </html>
