--- a/gatewayofindia.html
+++ b/gatewayofindia.html
@@ -7,7 +7,7 @@
       background:transparent url('background-img/F.jpg') repeat center top;
     }
   </style>
-	<title>Gateway of India</title>
+	<title>Gateway of India | Monuments of India</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +27,7 @@
 		<div class="header-name" id="head-name">Gateway of India
 		<div class="header-button">
     		<a class="active" href="monuments.html">Home</a>
-    		<a class="active" href="https://rk2962002.github.io/site/page1.html">Contact</a>
+    		<a class="active" href="https://rebrand.ly/rk/website">Contact</a>
     		<a class="active" href="about.html">About</a>
     	</div>
     	</div>
@@ -42,6 +42,9 @@
  	 		<li><a href="https://en.wikipedia.org/wiki/Gateway_of_India" target="_blank">Wikipedia</a></li>
   			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Gateway_of_India" target="_blank">Detail Download</a></li>
   			<li><a href="https://goo.gl/maps/gzPqPLx3FKtBjTnLA" target="_blank">360 Tour</a></li>
+        <li><a href="https://www.irctc.co.in/nget/train-search" target="_blank" title="Visit Website of IRCTC eTicketing System" >IRCTC</a></li>
+        <li><a href="https://www.oyorooms.com/" target="_blank" title="Visit Website of OYO Rooms" >OYO Rooms</a></li>
+        <li><a href="https://www.yatra.com/" target="_blank" title="Visit Website of Yatra" >Yatra</a></li>
 		</ul>
 	</div>
 <! –– TOP BUTTON ––>
@@ -113,6 +116,7 @@ The Gateway of India is located on the waterfront at Apollo Bunder area at the e
 	<ul class="reference container-fluid">
 		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.youtube.com/embed/4XSU39YXmWY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
 		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3774.2125432535267!2d72.83246561489884!3d18.921984087176394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7d1c73a0d5cad%3A0xc70a25a7209c733c!2sGateway%20Of%20India%20Mumbai!5e0!3m2!1sen!2sin!4v1592039245752!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
+      <li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!4v1603621407504!6m8!1m7!1sF%3A-DSUCuzsBgu0%2FWM7IRAfzoHI%2FAAAAAAAB9Ic%2Fws1A7CGUUgM6_Oz8fyzf8Xz3Mo4n1cZGwCLIBGAYYCw!2m2!1d18.9219841!2d72.8346543!3f300.99!4f22.17!5f0.7095412810854852" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
 	</ul><hr width="100%">
 <! –– FOOTER ––>
 	<footer class="panel-footer ">
