--- a/mysorepalace.html
+++ b/mysorepalace.html
@@ -7,7 +7,7 @@
       background:transparent url('background-img/I.jpg') repeat center top;
     }
   </style>
-	<title>Mysore Palace </title>
+	<title>Mysore Palace | Monuments of India </title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +27,7 @@
 		<div class="header-name" id="head-name">Mysore Palace 
 		<div class="header-button">
     		<a class="active" href="monuments.html">Home</a>
-    		<a class="active" href="https://rk2962002.github.io/site/page1.html">Contact</a>
+    		<a class="active" href="https://rebrand.ly/rk/website">Contact</a>
     		<a class="active" href="about.html">About</a>
     	</div>
     	</div>
@@ -36,12 +36,15 @@
 <! –– MENU BAR ––>
 	<div>
 		<ul class="links">
-  			<li><a href="monuments.html" target="_blank">Home</a></li>
+  			<li><a href="monuments.html">Home</a></li>
   			<li><a href="https://www.mysorepalace.gov.in/" target="_blank">Official Site</a></li>
   			<li><a href="https://www.gettyimages.in/photos/mysore-palace?mediatype=photography&phrase=MYSORE%20PALACE&sort= mostpopular" target="_blank">Gallery</a></li>
  	 		<li><a href="https://en.wikipedia.org/wiki/Mysore_Palace" target="_blank">Wikipedia</a></li>
   			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Mysore_Palace" target="_blank">Detail Download</a></li>
   			<li><a href="https://goo.gl/maps/u19oDdv6bc3D5wdL9" target="_blank">360 Tour</a></li>
+        <li><a href="https://www.irctc.co.in/nget/train-search" target="_blank" title="Visit Website of IRCTC eTicketing System" >IRCTC</a></li>
+        <li><a href="https://www.oyorooms.com/" target="_blank" title="Visit Website of OYO Rooms" >OYO Rooms</a></li>
+        <li><a href="https://www.yatra.com/" target="_blank" title="Visit Website of Yatra" >Yatra</a></li>
 		</ul>
 	</div>
 <! –– TOP BUTTON ––>
@@ -112,6 +115,7 @@
 	<ul class="reference container-fluid">
 		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.youtube.com/embed/sqtpLCP-stE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
 		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3898.1739495307497!2d76.6543858!3d12.3040698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baf701103f9a1f9%3A0xc37fbae2a124da0d!2sMysore%20Palace!5e0!3m2!1sen!2sin!4v1592041110333!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></iframe></div></li>
+    <li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!4v1603621608805!6m8!1m7!1sCAoSLEFGMVFpcE9GMVNTQTBvYmUtREo2a0J0eWxiSXdoMXQ2NGlUS29XOU51bzMw!2m2!1d12.3040698!2d76.6543858!3f24.19!4f11.780000000000001!5f0.7820865974627469"  frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
 	</ul><hr width="100%">
 <! –– FOOTER ––>
 	<footer class="panel-footer ">
